--- a/TSWA/MainWindow.xaml
+++ b/TSWA/MainWindow.xaml
@@ -46,13 +46,11 @@
         
 
         <!-- Wyświetlanie wartosci w roznych systemach liczbowych -->
-        <Label Grid.ColumnSpan="6" Grid.Row="1" Content="HEX"></Label>
-        <Label Grid.ColumnSpan="6" Grid.Row="2" Content="DEC"></Label>
-        <Label Grid.ColumnSpan="6" Grid.Row="3" Content="OCT"></Label>
-        <Label Grid.ColumnSpan="6" Grid.Row="4" Content="BIN" 
-               Margin="0,0,0,2" ></Label> <!--Dodane ze wzgledu na maly odstep od przyciskow -->
-
-
+        <Button Grid.ColumnSpan="6" Grid.Row="1" Style="{StaticResource ChangeNumericSystemButtons}" Content="   HEX"></Button>
+        <Button Grid.ColumnSpan="6" Grid.Row="2" Style="{StaticResource ChangeNumericSystemButtons}" Content="   DEC"></Button>
+        <Button Grid.ColumnSpan="6" Grid.Row="3" Style="{StaticResource ChangeNumericSystemButtons}" Content="   OCT"></Button>
+        <Button Grid.ColumnSpan="6" Grid.Row="4" Style="{StaticResource ChangeNumericSystemButtons}" Content="   BIN" Margin="0,0,0,2"></Button>
+        
         <!-- 5 przyciskow -->
         <Button Grid.Column="0" Grid.Row="5" Style="{StaticResource FirstTwoRowsButtonStyle}"></Button>
         <Button Grid.Column="1" Grid.Row="5" Style="{StaticResource FirstTwoRowsButtonStyle}"></Button>
