--- a/TSWA/Styles.xaml
+++ b/TSWA/Styles.xaml
@@ -93,6 +93,36 @@
         </Style.Triggers>
     </Style>
 
-
+    <!-- Styl dla przyciskow numerycznych, operacji itp. -->
+    <Style TargetType="Button" x:Key="ChangeNumericSystemButtons">
+        <Setter Property="FontSize" Value="11.5px"></Setter>
+        <Setter Property="FontWeight" Value="Bold"></Setter>
+        <Setter Property="Background" Value="#FFFFFF"/>
+        <Setter Property="Padding" Value="10,0,0,0"></Setter>
+        <Setter Property="VerticalContentAlignment" Value="Center"></Setter>
+        <Setter Property="HorizontalContentAlignment" Value="Left"></Setter>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Button">
+                    <Border Background="{TemplateBinding Background}"
+                            BorderBrush="#CCCCCC"
+                            BorderThickness="0, 0, 0, 0">
+                        <ContentPresenter x:Name="PART_Content"
+                                          VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                          HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                          TextElement.Foreground="{TemplateBinding Foreground}"></ContentPresenter>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Background" Value="#CCCCCC"></Setter>
+            </Trigger>
+            <Trigger Property="IsEnabled" Value="False">
+                <Setter Property="Foreground" Value="LightGray"></Setter>
+            </Trigger>
+        </Style.Triggers>
+    </Style>
 
 </ResourceDictionary>
