--- a/TSWA/MainWindow.xaml
+++ b/TSWA/MainWindow.xaml
@@ -104,8 +104,8 @@
         <Button Grid.Column="5" Grid.Row="10" Style="{StaticResource MainKeyboardStyle}" Tag="+" Click="Sign_Button_Click">+</Button>
 
         <!-- 6. wiersz -->
-        <Button Grid.Column="0" Grid.Row="11" Style="{StaticResource MainKeyboardStyle}" FontWeight="Bold">(</Button>
-        <Button Grid.Column="1" Grid.Row="11" Style="{StaticResource MainKeyboardStyle}" FontWeight="Bold">)</Button>
+        <Button Grid.Column="0" Grid.Row="11" Style="{StaticResource MainKeyboardStyle}" Tag="(" FontWeight="Bold" Click="Parenthesis_Button_Click">(</Button>
+        <Button Grid.Column="1" Grid.Row="11" Style="{StaticResource MainKeyboardStyle}" Tag=")" FontWeight="Bold" Click="Parenthesis_Button_Click">)</Button>
         <Button Grid.Column="2" Grid.Row="11" Style="{StaticResource MainKeyboardStyle}" >+/-</Button>
         <Button Grid.Column="3" Grid.Row="11" Style="{StaticResource MainKeyboardStyle}" FontWeight="Bold"  Tag ="0" Click="Numeric_Button_Click">0</Button>
         <Button Grid.Column="4" Grid.Row="11" Style="{StaticResource MainKeyboardStyle}" FontWeight="Bold">,</Button>
