--- a/TSWA/MainWindow.xaml
+++ b/TSWA/MainWindow.xaml
@@ -56,7 +56,7 @@
         <Button Grid.Column="1" Grid.Row="5" Style="{StaticResource FirstTwoRowsButtonStyle}"></Button>
 
         <Border Grid.Column="2" Grid.Row="5" Grid.ColumnSpan="2" BorderThickness="0,1,0,0" BorderBrush="#CCCCCC">
-            <Button  Margin="25,0,25,0" Style="{StaticResource WordButtonStyle}" Click="Word_Button_Click" >QWORD</Button>
+            <Button Name="WordButton"  Margin="25,0,25,0" Style="{StaticResource WordButtonStyle}" Click="Word_Button_Click" Content="QWORD" ></Button>
         </Border>
         
         <Button Grid.Column="4" Grid.Row="5" Style="{StaticResource FirstTwoRowsButtonStyle}">MS</Button>
