--- a/TSWA/MainWindow.xaml
+++ b/TSWA/MainWindow.xaml
@@ -108,7 +108,7 @@
         <Button Grid.Column="1" Grid.Row="11" Style="{StaticResource MainKeyboardStyle}" Tag=")" FontWeight="Bold" Click="Parenthesis_Button_Click">)</Button>
         <Button Grid.Column="2" Grid.Row="11" Style="{StaticResource MainKeyboardStyle}" >+/-</Button>
         <Button Grid.Column="3" Grid.Row="11" Style="{StaticResource MainKeyboardStyle}" FontWeight="Bold"  Tag ="0" Click="Numeric_Button_Click">0</Button>
-        <Button Grid.Column="4" Grid.Row="11" Style="{StaticResource MainKeyboardStyle}" FontWeight="Bold">,</Button>
+        <Button Grid.Column="4" Grid.Row="11" Style="{StaticResource MainKeyboardStyle}" FontWeight="Bold" IsEnabled="False">,</Button>
         <Button Grid.Column="5" Grid.Row="11" Style="{StaticResource MainKeyboardStyle}" Click="Equal_Button_Click">=</Button>
 
         <!--
